--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <link rel="shortcut-icon" href="assets/logo-title.png">
+    <link rel="shortcut icon" href="assets/logo-title.png">
 
     <!-- Primary Meta Tags -->
     <meta charset="UTF-8">
@@ -33,9 +34,34 @@
 
     <title>Break free from government & big tech overwatch. Go Blank.</title>
 </head>
+
 <body>
     <main>
-        
+        <div class="main__description-block">
+            <nav class="main__nav">
+                <div class="nav__logo">
+                    <svg class="logo__svg" width="27" height="27" viewBox="0 0 27 27" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M13.5 27C20.9558 27 27 20.9558 27 13.5C27 6.04416 20.9558 0 13.5 0C6.04416 0 0 6.04416 0 13.5C0 20.9558 6.04416 27 13.5 27ZM21 6H6V21H21V6Z"
+                            fill="black" />
+                    </svg>
+                    <h1 class="logo__name-h1">Blank</h1>
+                </div>
+                <div class="nav__group-links">
+                    <a href="javascript:void(0)" class="group-links__link group-links__link_active">Why Blank</a>
+
+                    <a href="javascript:void(0)" class="group-links__link">What blank offers</a>
+
+                    <a href="javascript:void(0)" class="group-links__link">How it works</a>
+
+                    <a href="javascript:void(0)" class="group-links__link">Blank token</a>
+
+                    <a href="javascript:void(0)" class="group-links__link">Token Metrics</a>
+                </div>
+            </nav>
+        </div>
     </main>
 </body>
+
 </html>
