block about privacy by design was completed

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
                     <path d="M643 449.693H551.434V507.685H643V449.693Z" fill="#E7F1FB" />
                     <path d="M104.793 242.142H0V302.169H104.793V242.142Z" fill="#E7F1FB" />
                 </svg>
-                <img src="img/account.png" class="main__img" alt="фотография аккаунта в приложении">
+                <img src="img/account.png" class="description-block__img" alt="фотография аккаунта в приложении">
             </div>
         </div>
         <div class="main__block-about-anonymity">
@@ -3169,6 +3169,20 @@
                     for you with the amount of crypto $$$ that you requested.
                 </p>
             </div>
+        </div>
+        <div class="main__privacy-by-design">
+            <div class="title-block">
+                <p class="title__cap">Privacy by design</p>
+                <h3 class="title__subtitle">Metamask x Tornado Cash</h3>
+                <p class="title__text">Your funds go into the smart contract as yours but they exit named Blank. We use cryptographic proofs to guarantee that no one can link your withdrawals to deposits, unless you want them to. In technical language, we use the zkSnark technology to do it. Only the user gets the secret to a given deposit, which allows to withdraw the correlating funds from Blank under a new address.
+                </p>
+                <ul class="title-block__ul">
+                    <li>ETH, WBTC and all ERC-20 support</li>
+                    <li>Automatic Deposits</li>
+                    <li>Partial Withdraw</li>
+                </ul>
+            </div>
+            <img src="img/blank-wallet.jpg" class="privacy-by-design__img">
         </div>
     </main>
 </body>
