--- a/src/index.html
+++ b/src/index.html
@@ -3174,7 +3174,11 @@
             <div class="title-block">
                 <p class="title__cap">Privacy by design</p>
                 <h3 class="title__subtitle">Metamask x Tornado Cash</h3>
-                <p class="title__text">Your funds go into the smart contract as yours but they exit named Blank. We use cryptographic proofs to guarantee that no one can link your withdrawals to deposits, unless you want them to. In technical language, we use the zkSnark technology to do it. Only the user gets the secret to a given deposit, which allows to withdraw the correlating funds from Blank under a new address.
+                <p class="title__text">Your funds go into the smart contract as yours but they exit named Blank. We use
+                    cryptographic proofs to guarantee that no one can link your withdrawals to deposits, unless you want
+                    them to. In technical language, we use the zkSnark technology to do it. Only the user gets the
+                    secret to a given deposit, which allows to withdraw the correlating funds from Blank under a new
+                    address.
                 </p>
                 <ul class="title-block__ul">
                     <li>ETH, WBTC and all ERC-20 support</li>
@@ -3183,6 +3187,21 @@
                 </ul>
             </div>
             <img src="img/blank-wallet.jpg" class="privacy-by-design__img">
+        </div>
+        <div class="main__block-about-secure">
+            <div class="title-block">
+                <p class="title__cap">100% secure</p>
+                <h3 class="title__subtitle">Protected by smart contracts that only you have the access to.</h3>
+                <p class="title__text">Independent auditors audit Blank’s smart contracts before every release. Once the code is live, it remains fixed. No intruder can manipulate it, change it, nor twist it anyhow. We put our money where our mouths are, so we will provide initial liquidity in Blank smart contracts to provide privacy coverage for your transfers.
+                </p>
+                <ul class="title-block__ul">
+                    <li>Hierarchical Deterministic Seed Key</li>
+                    <li>Open Source</li>
+                    <li>Secured with audits and bug bounties</li>
+                </ul>
+            </div>
+            <img src="img/blank-wallet2.jpg" class="privacy-by-design__img">
+
         </div>
     </main>
 </body>
