banner block was complete

--- a/src/index.html
+++ b/src/index.html
@@ -3192,7 +3192,10 @@
             <div class="title-block">
                 <p class="title__cap">100% secure</p>
                 <h3 class="title__subtitle">Protected by smart contracts that only you have the access to.</h3>
-                <p class="title__text">Independent auditors audit Blank’s smart contracts before every release. Once the code is live, it remains fixed. No intruder can manipulate it, change it, nor twist it anyhow. We put our money where our mouths are, so we will provide initial liquidity in Blank smart contracts to provide privacy coverage for your transfers.
+                <p class="title__text">Independent auditors audit Blank’s smart contracts before every release. Once the
+                    code is live, it remains fixed. No intruder can manipulate it, change it, nor twist it anyhow. We
+                    put our money where our mouths are, so we will provide initial liquidity in Blank smart contracts to
+                    provide privacy coverage for your transfers.
                 </p>
                 <ul class="title-block__ul">
                     <li>Hierarchical Deterministic Seed Key</li>
@@ -3203,6 +3206,27 @@
             <img src="img/blank-wallet2.jpg" class="privacy-by-design__img">
 
         </div>
+        <div role="banner" class="main__banner">
+            <p class="banner__title">Your option to go blank</p>
+            <p class="banner__subtitle">If given a choice: do you reveal your identity or remain anonymous?</p>
+            <p class="banner__text">Because privacy shouldn’t be an “opt-in.” With Blank, it’s something you could
+                occasionally “opt-out” of with</p>
+            <p class="banner__phrase">Your Free Will.</p>
+            
+            <div class="banner__actions">
+                <button class="actions__button actions__button_blue">
+                    Request Early Access 
+                    <i class="fas fa-arrow-down"></i>
+                </button>
+
+                <button class="actions__button actions__button_white">
+                    Whitepaper
+                    <i class="fas fa-arrow-down"></i>
+                </button>
+            </div>
+
+        </div>
+        
     </main>
 </body>
 
