block blank-token was completed

--- a/src/index.html
+++ b/src/index.html
@@ -3212,10 +3212,10 @@
             <p class="banner__text">Because privacy shouldn’t be an “opt-in.” With Blank, it’s something you could
                 occasionally “opt-out” of with</p>
             <p class="banner__phrase">Your Free Will.</p>
-            
+
             <div class="banner__actions">
                 <button class="actions__button actions__button_blue">
-                    Request Early Access 
+                    Request Early Access
                     <i class="fas fa-arrow-down"></i>
                 </button>
 
@@ -3226,7 +3226,145 @@
             </div>
 
         </div>
-        
+        <div class="main__blank-token">
+            <div class="title-block">
+                <p class="title__cap">Blank token</p>
+                <h3 class="title__subtitle">BLANK Token Utility starts on Day 1.</h3>
+            </div>
+            <div class="blank-token__our-advantages">
+                <div class="blank-token__advantage">
+                    <svg width="27" height="28" viewBox="0 0 27 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0)">
+                            <path
+                                d="M8.86435 8.43814C8.67217 8.27681 8.45911 8.13968 8.23036 8.03012C7.98105 7.90772 7.72461 7.79211 7.4468 7.6765C7.22297 7.597 7.01737 7.47692 6.8413 7.32289C6.77739 7.25607 6.72808 7.17774 6.69629 7.0925C6.66448 7.00726 6.65082 6.91682 6.6561 6.82647C6.64151 6.64908 6.70033 6.4733 6.81994 6.33685C6.8766 6.27593 6.9472 6.2283 7.02626 6.19763C7.10533 6.16698 7.19072 6.1541 7.27583 6.16004C7.37462 6.15373 7.47339 6.17242 7.56219 6.21421C7.65099 6.256 7.72667 6.31941 7.7816 6.39805C7.91413 6.60131 7.97643 6.83918 7.95968 7.07808H9.4698C9.49923 6.58539 9.33399 6.1001 9.00684 5.71802C8.74057 5.43259 8.38646 5.23499 7.99529 5.15359V4.18115H6.70596V5.15359C6.31284 5.22173 5.9476 5.39371 5.6517 5.65001C5.48561 5.80266 5.3548 5.98678 5.2677 6.19057C5.1806 6.39434 5.13912 6.61327 5.14594 6.83327C5.1396 7.08486 5.18811 7.33496 5.28841 7.5677C5.38319 7.77158 5.52431 7.95278 5.70156 8.09813C5.89189 8.26172 6.1053 8.39906 6.33555 8.50614C6.58724 8.62401 6.85793 8.73962 7.14761 8.85295C7.37667 8.92947 7.58567 9.05242 7.76022 9.21338C7.88205 9.36485 7.94273 9.55317 7.93119 9.74384C7.94005 9.91753 7.87888 10.0879 7.76022 10.2198C7.69706 10.2778 7.62213 10.3228 7.54004 10.352C7.45795 10.3812 7.37046 10.3942 7.28296 10.3898C7.1631 10.3971 7.04307 10.3783 6.93198 10.3346C6.8209 10.2911 6.72167 10.2239 6.64185 10.1382C6.47285 9.92638 6.39168 9.66246 6.4139 9.397H4.91087C4.8836 9.91735 5.07018 10.4273 5.43088 10.8182C5.77092 11.1532 6.22095 11.3668 6.70596 11.4235V12.2939H7.99529V11.3827C8.35553 11.3128 8.68698 11.1452 8.94983 10.8999C9.11205 10.7454 9.23895 10.5605 9.32229 10.3569C9.40572 10.1531 9.44379 9.93514 9.43425 9.71656C9.44199 9.46203 9.39087 9.20895 9.28467 8.97537C9.18297 8.77162 9.04014 8.58905 8.86435 8.43814Z"
+                                fill="#1673FF" />
+                            <path
+                                d="M7.18994 14.2452C10.6638 14.2452 13.4799 11.5568 13.4799 8.2405C13.4799 4.92422 10.6638 2.23584 7.18994 2.23584C3.7161 2.23584 0.899994 4.92422 0.899994 8.2405C0.899994 11.5568 3.7161 14.2452 7.18994 14.2452Z"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M12.1333 0.90332H23.2173L20.831 17.7829L24.3001 17.8713L13.8856 26.1936L6.32065 17.4156L9.78974 17.5041"
+                                stroke="#040F1F" stroke-width="2" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0">
+                                <rect width="27" height="28" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <p class="advenatge__text">Fee reduction for token holders</p>
+                </div>
+
+                <div class="blank-token__advantage">
+                    <svg width="23" height="28" viewBox="0 0 23 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0)">
+                            <path
+                                d="M14.8829 5.79109C14.8829 6.64332 14.5266 7.46065 13.8922 8.06327C13.2579 8.66588 12.3975 9.00443 11.5004 9.00443C10.6032 9.00443 9.74289 8.66588 9.1085 8.06327C8.47414 7.46065 8.11775 6.64332 8.11775 5.79109C8.11775 4.01844 11.5004 0 11.5004 0C11.5004 0 14.8829 4.01844 14.8829 5.79109Z"
+                                fill="#1673FF" />
+                            <path
+                                d="M4.89883 9.00439H18.1022V16.2998C18.1022 17.8862 17.4387 19.4077 16.2578 20.5295C15.077 21.6513 13.4753 22.2816 11.8053 22.2816H11.2031C9.53308 22.2816 7.93145 21.6513 6.75056 20.5295C5.56968 19.4077 4.90626 17.8862 4.90626 16.2998V9.00439H4.89883Z"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M11.5005 22.2818C9.75086 22.2818 8.07287 21.622 6.83503 20.4475C5.5972 19.2729 4.9008 17.6795 4.89883 16.0176"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M11.5007 19.9371C10.4057 19.9371 9.35544 19.5243 8.58048 18.7895C7.80552 18.0546 7.36916 17.0577 7.36719 16.0176"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M20.0717 9.00439H22.0419V13.1924C22.0419 13.6839 21.9399 14.1706 21.7419 14.6247C21.5439 15.0789 21.2536 15.4915 20.8877 15.8391C20.5218 16.1866 20.0875 16.4623 19.6095 16.6505C19.1314 16.8386 18.6191 16.9354 18.1017 16.9354"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M4.89853 9.00439H0.958356V13.1924C0.956398 13.6851 1.05687 14.1733 1.254 14.6291C1.45114 15.0848 1.74107 15.4991 2.10714 15.8482C2.47321 16.1973 2.90823 16.4743 3.38725 16.6632C3.86627 16.8522 4.37985 16.9495 4.89853 16.9495"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path d="M11.5005 23.7856V27.0343" stroke="#040F1F" stroke-width="2" />
+                            <path d="M4.89883 27.0347H18.1022" stroke="#040F1F" stroke-width="2" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0">
+                                <rect width="23" height="28" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+
+                    <p class="advenatge__text">Referral and reward systems use only BLANK tokens</p>
+                </div>
+
+                <div class="blank-token__advantage">
+                    <svg width="26" height="28" viewBox="0 0 26 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0)">
+                            <path
+                                d="M20.5578 3.88867C20.9839 7.25139 21.1957 10.6386 21.1919 14.0291C21.1901 18.3969 20.8375 22.7573 20.1375 27.0668H22.873C23.4714 9.2124 25.4305 6.95253 26.0005 3.88867H20.5578Z"
+                                fill="#1673FF" />
+                            <path
+                                d="M1.85715 0.933105H20.0158C20.7203 5.25428 21.0753 9.62692 21.0773 14.0071C21.0729 18.3751 20.7179 22.7354 20.0158 27.0447H1.85715C2.69219 22.5075 3.09063 17.8984 3.04683 13.2827C3.02242 10.5677 2.84165 7.85657 2.50542 5.16311"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path d="M6.21028 9.06721L7.76328 10.6534L10.7126 7.65479" stroke="#040F1F"
+                                stroke-width="2" />
+                            <path d="M13.1696 9.1543H17.9069" stroke="#040F1F" stroke-width="2" />
+                            <path d="M6.21028 17.2883L7.76328 18.8674L10.7126 15.8687" stroke="#040F1F"
+                                stroke-width="2" />
+                            <path d="M13.1696 17.3682H17.9069" stroke="#040F1F" stroke-width="2" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0">
+                                <rect width="26" height="28" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+
+                    <p class="advenatge__text">
+                        Exclusive features and "access-first" functionality to token holders
+                    </p>
+                </div>
+                <div class="blank-token__advantage">
+                    <svg width="28" height="28" viewBox="0 0 28 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M6.44345 6.44361C1.87566 11.0114 1.349 17.2979 4.57752 20.5265C7.80604 23.755 14.0926 23.2283 18.6604 18.6605C23.2281 14.0928 23.7548 7.80621 20.5263 4.57769C17.2977 1.34917 11.0112 1.87583 6.44345 6.44361ZM3.21207 21.8919C-1.06073 17.6191 0.0834203 10.0727 5.078 5.07817C10.0726 0.0835882 17.619 -1.06056 21.8918 3.21224C26.1646 7.48504 25.0204 15.0313 20.0258 20.026C15.0312 25.0206 7.48487 26.1647 3.21207 21.8919Z"
+                            fill="#040F1F" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M21.8691 3.1875L24.9578 6.2762C24.9578 6.27624 24.9577 6.27616 24.9578 6.2762C29.2357 10.5461 28.0888 18.0921 23.0919 23.0891C19.1567 27.0243 13.723 28.5747 9.46283 26.9791L10.1402 25.1708C13.5175 26.4357 18.1815 25.2686 21.7265 21.7236C26.2979 17.1522 26.8244 10.8676 23.5936 7.64295L20.5036 4.55294L21.8691 3.1875Z"
+                            fill="#040F1F" />
+                        <path
+                            d="M9.0558 5.67871C8.39007 6.12465 7.7697 6.63483 7.20362 7.20193C3.35622 11.0494 2.684 16.613 5.70184 19.6237L12.9246 12.4009L9.0558 5.67871Z"
+                            fill="#1673FF" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M17.9219 7.41991C16.6847 5.79633 14.4573 5.27002 12.0721 6.13241L11.4155 4.31642C14.3819 3.24391 17.5851 3.79111 19.4584 6.25024L19.4594 6.25153C20.7745 7.9839 21.0898 10.2456 20.6443 12.4364C20.1978 14.6319 18.9782 16.8302 17.1066 18.5394L17.1057 18.5401C14.1571 21.2265 10.2481 22.0709 7.35909 20.4616L8.29883 18.7747C10.2462 19.8594 13.2637 19.4276 15.8044 17.1135L17.9219 7.41991ZM17.9219 7.41991C18.8228 8.60717 19.1153 10.2651 18.752 12.0517C18.3896 13.8339 17.3837 15.6713 15.8045 17.1134"
+                            fill="#040F1F" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M25.5409 16.6326L22.7397 13.8313L24.1051 12.4658L26.9064 15.2671L25.5409 16.6326Z"
+                            fill="#040F1F" />
+                        <path fill-rule="evenodd" clip-rule="evenodd"
+                            d="M18.2224 22.4736L19.9601 24.2114L18.936 25.2355L17.1983 23.4977L18.2224 22.4736Z"
+                            fill="#040F1F" />
+                    </svg>
+                    <p class="advenatge__text">Token burn from 1/3rd of the fees</p>
+                </div>
+                <div class="blank-token__advantage">
+                    <svg width="30" height="28" viewBox="0 0 30 28" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g clip-path="url(#clip0)">
+                            <path
+                                d="M23.5066 14.8595C23.5191 14.5362 23.4595 14.2142 23.3318 13.9168C23.2042 13.6196 23.0119 13.3544 22.7689 13.1409C22.5303 12.9271 22.2679 12.7415 21.9868 12.5877C21.6696 12.4254 21.3302 12.2704 20.9761 12.1156C20.6886 12.0121 20.4251 11.8515 20.2014 11.6435C20.1177 11.5523 20.053 11.4453 20.0112 11.3288C19.9694 11.2122 19.9513 11.0886 19.958 10.9649C19.9417 10.7279 20.0155 10.4935 20.1645 10.3085C20.2391 10.2276 20.3308 10.1645 20.4329 10.1236C20.535 10.0828 20.645 10.0653 20.7547 10.0724C20.8823 10.0639 21.0098 10.0886 21.125 10.1442C21.2401 10.1998 21.3388 10.2844 21.4114 10.3896C21.5813 10.6658 21.6613 10.988 21.64 11.3116H23.5878C23.6114 10.6581 23.3964 10.0184 22.9828 9.5118C22.6416 9.11764 22.1846 8.84139 21.677 8.72261V7.40967H19.9948V8.68572C19.4862 8.77135 19.0141 9.0048 18.6373 9.35696C18.4213 9.56248 18.2512 9.8113 18.138 10.0871C18.0248 10.363 17.9713 10.6596 17.9807 10.9575C17.9742 11.2961 18.0369 11.6325 18.1652 11.9459C18.2905 12.2252 18.4713 12.4761 18.6964 12.6835C18.9439 12.9046 19.2222 13.0884 19.5227 13.2294C19.8374 13.3867 20.1842 13.5416 20.5629 13.6941C20.8555 13.7982 21.1223 13.9644 21.345 14.1809C21.5131 14.3883 21.5949 14.6524 21.5736 14.9185C21.5811 15.0354 21.5646 15.1526 21.5254 15.2629C21.486 15.3732 21.4247 15.4743 21.345 15.5602C21.2646 15.639 21.1686 15.7002 21.0631 15.7396C20.9576 15.7789 20.845 15.7957 20.7326 15.7888C20.5782 15.7983 20.4236 15.7727 20.2806 15.7139C20.1375 15.6551 20.0095 15.5647 19.9063 15.4496C19.6821 15.1461 19.5795 14.7699 19.6186 14.3948H17.6782C17.6633 14.9083 17.7829 15.4168 18.025 15.87L21.6622 17.0575C21.6622 17.0575 21.7065 17.0575 21.7286 17.0575C22.1639 16.9603 22.5644 16.7461 22.8869 16.438C23.0889 16.2285 23.2476 15.9813 23.354 15.7104C23.4604 15.4396 23.5122 15.1504 23.5066 14.8595Z"
+                                fill="#1673FF" />
+                            <path
+                                d="M12.3139 12.4914C12.3514 11.3907 12.6074 10.3084 13.0672 9.30763C13.527 8.3068 14.1813 7.40738 14.992 6.66173C15.8028 5.91609 16.7538 5.3391 17.7896 4.96435C18.8255 4.58959 19.9256 4.42456 21.0259 4.47884C22.1261 4.53314 23.2046 4.80567 24.1986 5.28059C25.1925 5.7555 26.082 6.4233 26.8153 7.24514C27.5487 8.06699 28.1112 9.02644 28.4702 10.0676C28.8292 11.1089 28.9775 12.2111 28.9063 13.3102C28.8453 14.5578 28.4968 15.7745 27.8882 16.8655"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M6.72171 9.74013C9.15425 9.74013 11.1263 7.76859 11.1263 5.33661C11.1263 2.90462 9.15425 0.933105 6.72171 0.933105C4.28917 0.933105 2.3172 2.90462 2.3172 5.33661C2.3172 7.76859 4.28917 9.74013 6.72171 9.74013Z"
+                                stroke="#040F1F" stroke-width="2" />
+                            <path
+                                d="M0.9375 19.0931L6.27159 15.3462C7.2703 14.6435 8.41894 14.183 9.62653 14.0012C10.8341 13.8194 12.0674 13.9213 13.2288 14.2987L21.6615 17.05C21.9248 17.1275 22.1481 17.3032 22.2854 17.5407C22.4227 17.7781 22.4634 18.0594 22.3993 18.326L22.3329 18.5915C22.2735 18.8311 22.1332 19.0428 21.9354 19.1907C21.7378 19.3386 21.495 19.4136 21.2483 19.403L15.4126 19.1522C15.4126 19.1522 20.3188 23.5041 27.3866 18.7022C27.5452 18.5942 27.7309 18.5327 27.9226 18.5249C28.1143 18.5171 28.3043 18.5632 28.4712 18.658C28.6357 18.7437 28.7758 18.8696 28.8785 19.024C28.9812 19.1783 29.0432 19.3562 29.0587 19.541C29.0741 19.7258 29.0426 19.9115 28.967 20.0808C28.8913 20.2501 28.774 20.3975 28.6261 20.5094L24.7307 23.4229C23.9707 23.9861 23.0502 24.2912 22.1042 24.2933H16.7258C16.1836 24.2917 15.6461 24.1917 15.1396 23.9983L8.13816 21.2912L0.9375 27.0667"
+                                stroke="#040F1F" stroke-width="2" />
+                        </g>
+                        <defs>
+                            <clipPath id="clip0">
+                                <rect width="30" height="28" fill="white" />
+                            </clipPath>
+                        </defs>
+                    </svg>
+                    <p class="advenatge__text">Liquidity Providers earn 1/3rd of the fees</p>
+                </div>
+
+            </div>
+        </div>
     </main>
 </body>
 
