block with table was completed

--- a/src/index.html
+++ b/src/index.html
@@ -3365,6 +3365,181 @@
 
             </div>
         </div>
+        <div class="main__table-about-us">
+            <h2 class="table-about-us__title">Innovating decentralized finance</h2>
+            <h3 class="table-about-us__subtitle">We’re taking the best that exists, and making it better.</h3>
+            <table>
+                <tr>
+                    <th class="table__td_long">See why Blank is better than others.</th>
+                    <th>Blank</th>
+                    <th>Metamask</th>
+                    <th>Tornado.Cash</th>
+                </tr>
+                <tr>
+                    <td class="table__td_long">Hidden History</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td></td>
+                    <td class="table__td_center"><svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">0 User Tracking</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td></td>
+                    <td class="table__td_center"><svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">Browser Extension Wallet</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">Web3 ready for all DeFi applications</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">ERC-20 Support</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td class="table__td_center">
+                        4
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">Partial Withdraw</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none"
+                            xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td>
+                    </td>
+                </tr>
+
+                <tr>
+                    <td class="table__td_long">Automatic Deposits</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+
+                <tr>
+                    <td class="table__td_long">Referral system</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+
+
+                <tr>
+                    <td class="table__td_long">Revenue Sharing</td>
+                    <td class="table__td_center">
+                        <svg width="20" height="16" viewBox="0 0 20 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd"
+                                d="M19.41 1.89631L7.72049 15.4454L0.585938 8.70729L1.95918 7.25326L7.57278 12.5549L17.8957 0.589844L19.41 1.89631Z"
+                                fill="#1673FF" />
+                        </svg>
+                    </td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
+        </div>
     </main>
 </body>
 
